--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,6 +11,14 @@
 				"-g",
 				"-lreadline",
 				"*.c",
+				"builtins/clears.c",
+				"builtins/echos.c",
+				"builtins/exit.c",
+				"builtins/historyh.c",
+				"builtins/lss.c",
+				"builtins/pwds.c",
+				"builtins/timet.c",
+				"builtins/whoami.c",
 				"-o",
 				"${fileDirname}/${fileBasenameNoExtension}"
 			],
