--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,21 +2,12 @@
 	"version": "2.0.0",
 	"tasks": [
 		{
-			"type": "cppbuild",
+			"type": "shell",
 			"label": "C/C++: clang build active file",
-			"command": "/usr/bin/clang",
-			"args": [
-				"-fcolor-diagnostics",
-				"-fansi-escape-codes",
-				"-g",
-				"-lreadline",
-				"*.c",
-				"builtins/*.c",
-				"-o",
-				"${fileDirname}/minishell"
-			],
+			"command": "make",
+			"args": [],
 			"options": {
-				"cwd": "${fileDirname}"
+				"cwd": "${fileDirname}/../"
 			},
 			"problemMatcher": [
 				"$gcc"
